--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿<!--Having this here allows us to not have to hard code in what we need and be able to use Entry to help us find what we need-->
+@model Treehouse.FitnessFrog.Models.Entry
+
 @{
                 ViewBag.Title = "Add Entry";
 }
@@ -12,28 +14,29 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.Label("Date", new {  @class = "control-label" })
-                @Html.TextBox("Date", null, new { @class = "form-control" })
+                <!--Using the Entry to grab the things we need-->
+                @Html.LabelFor(m => m.Date, new {  @class = "control-label" })
+                @Html.TextBoxFor(m => m.Date, new { @class = "form-control" })
             </div>
 
             <div class="form-group">
-                @Html.Label("ActivityId", new { @class = "control-label" })
-                @Html.TextBox("ActivityId", null, new { @class = "form-control" })
+                @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.ActivityId, new { @class = "form-control" })
             </div>
 
             <div class="form-group">
-                @Html.Label("Duration", new { @class = "control-label" })
-                @Html.TextBox("Duration", null, new { @class = "form-control" })
+                @Html.LabelFor(m => m.Duration, new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.Duration, new { @class = "form-control" })
             </div>
 
             <div class="form-group">
-                @Html.Label("Intensity", new { @class = "control-label" })
-                @Html.TextBox("Intensity", null, new { @class = "form-control" })
+                @Html.LabelFor(m => m.Intensity, new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.Intensity, new { @class = "form-control" })
             </div>
 
             <div class="form-group">
-                @Html.Label("Exclude", new { @class = "control-label" })
-                @Html.TextBox("Exclude", null, new { @class = "form-control" })
+                @Html.LabelFor(m => m.Exclude, new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.Exclude, new { @class = "form-control" })
             </div>
 
         </div>
@@ -41,8 +44,8 @@
         <div class="col-md-6">
 
             <div class="form-group">
-                @Html.Label("Notes", new { @class = "control-label" })
-                @Html.TextArea("Notes", null, 14, 20, new { @class = "form-control" })
+                @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
+                @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
             </div>
 
         </div>
