--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -2,8 +2,27 @@
 @model Treehouse.FitnessFrog.Models.Entry
 
 @{
-                ViewBag.Title = "Add Entry";
+    ViewBag.Title = "Add Entry";
+
+    //var selectListItems = new[]
+    //{
+    //    new SelectListItem() {Value = "1", Text = "Item 1", Selected = false},
+    //    new SelectListItem() {Value = "2", Text = "Item 2", Selected = true}
+
+    //};
+
+    //var items = new[]
+    //{
+    //    new {Id = 1, Name = "Item 1"},
+    //    new {Id = 2, Name = "Item 2"}
+    //};
+    //var selectListItems = new SelectList(items, "Id", "Name");
 }
+
+@*<select>
+    <option value="1">Item 1</option>
+    <option value="2" selected>Item 2</option>
+</select>*@
 
 <h2>@ViewBag.Title</h2>
 
@@ -21,7 +40,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.ActivityId, new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectListItems, "Select an Activity" , new { @class = "form-control" })
             </div>
 
             <div class="form-group">
