--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,5 +1,6 @@
 ﻿<!--Having this here allows us to not have to hard code in what we need and be able to use Entry to help us find what we need-->
 @model Treehouse.FitnessFrog.Models.Entry
+    @using Treehouse.FitnessFrog.Models
 
 @{
     ViewBag.Title = "Add Entry";
@@ -50,7 +51,17 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Intensity, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Intensity, new { @class = "form-control" })
+                <div>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity, Entry.IntensityLevel.Low) @Entry.IntensityLevel.Low
+                    </label>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity, Entry.IntensityLevel.Medium) @Entry.IntensityLevel.Medium
+                    </label>
+                    <label class="radio-inline">
+                        @Html.RadioButtonFor(m => m.Intensity, Entry.IntensityLevel.High) @Entry.IntensityLevel.High
+                    </label>
+                </div>
             </div>
 
             <div class="form-group">
